force-app/main/default/objects/BrillioFC__Application_Access_Detail__c/BrillioFC__Application_Access_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Application Access Detail</label>
    <nameField>
        <displayFormat>AAD-{0000}</displayFormat>
        <label>ForceClinic Application Access Detail Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ForceClinic Application Access Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>