force-app/main/default/objects/BrillioFC__Application_Access_Detail__c/fields/BrillioFC__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Application_Name__c</fullName>
    <label>Application Name</label>
    <referenceTo>BrillioFC__Application_Details__c</referenceTo>
    <relationshipLabel>ForceClinic Application Access Details</relationshipLabel>
    <relationshipName>Application_Access_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>