force-app/main/default/objects/BrillioFC__Application_Access_Detail__c/fields/BrillioFC__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Profile_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Name</label>
    <referenceTo>BrillioFC__Profile_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Application Access Details</relationshipLabel>
    <relationshipName>Application_Access_Details</relationshipName>
    <type>Lookup</type>
</CustomField>